Add 2025 optimized Dockerfiles, Kubernetes deployments, and CI/CD pipeline
- Optimized Dockerfiles for all microservices with multi-stage builds
- Added Kubernetes manifests with HPA, PDB, and health checks
- Created CI/CD pipeline for GitHub Actions
- Added OpenTelemetry observability configuration
- Created deployment scripts for local and GHCR
- Updated build.gradle with Spring Boot 3.4 and optimizations
- Added optimized nginx.conf for frontend
- Created comprehensive Kubernetes setup scripts

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,14 @@
+# Git
 .git
 .gitignore
 .github
 
+# Documentation
 *.md
 docs/
+README*
 
+# IDE
 .idea
 .vscode
 *.iml
@@ -12,6 +16,7 @@ docs/
 *.swo
 *~
 
+# Build artifacts
 **/build/
 !**/build/libs/*.jar
 **/target/
@@ -20,35 +25,46 @@ docs/
 **/node_modules/
 **/dist/
 
+# Logs
 *.log
 logs/
 
+# OS
 .DS_Store
 Thumbs.db
 
+# Docker
 docker-compose*.yml
 Dockerfile*
 .dockerignore
 
-.github/
-
-k8s/
-
+# Scripts
 *.sh
 start.sh
 
+# Environment
 .env
 .env.local
 .env.*.local
 
+# Tests
 **/test/
 **/__tests__/
 **/*.test.*
 **/*.spec.*
 
+# Coverage
 coverage/
 .nyc_output/
 
+# Temporary
 tmp/
 temp/
 *.tmp
+
+# Kubernetes
+k8s/
+*.yaml
+*.yml
+!**/src/**/*.yml
+!**/src/**/*.yaml
