--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -3,7 +3,15 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+    
+    // Observability - OpenTelemetry 2025
     implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'io.micrometer:micrometer-tracing-bridge-otel'
+    implementation 'io.opentelemetry:opentelemetry-exporter-zipkin'
+    implementation 'io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter:2.5.0-alpha'
+    
+    // Resilience
+    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
 }
 
 
