--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.5' apply false
-    id 'io.spring.dependency-management' version '1.1.4' apply false
+    id 'org.springframework.boot' version '3.4.0' apply false
+    id 'io.spring.dependency-management' version '1.1.7' apply false
 }
 
 allprojects {
@@ -10,6 +10,7 @@ allprojects {
 
     repositories {
         mavenCentral()
+        gradlePluginPortal()
     }
 }
 
@@ -20,6 +21,9 @@ subprojects {
     java {
         sourceCompatibility = '21'
         targetCompatibility = '21'
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
+        }
     }
 
     configurations {
@@ -30,14 +34,34 @@ subprojects {
 
     dependencyManagement {
         imports {
-            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.3"
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.0"
         }
     }
 
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+        options.compilerArgs += [
+            '-parameters',
+            '-Xlint:unchecked',
+            '-Xlint:deprecation'
+        ]
+    }
+
     tasks.withType(Test) {
+        useJUnitPlatform()
         maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
         forkEvery = 10
-        useJUnitPlatform()
+        testLogging {
+            events "passed", "skipped", "failed"
+            exceptionFormat "full"
+        }
+    }
+
+    tasks.withType(org.springframework.boot.gradle.tasks.bundling.BootJar) {
+        archiveFileName = "${project.name}-${project.version}.jar"
+        layered {
+            enabled = true
+        }
     }
 
     apply plugin: 'org.springframework.boot'
