--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,16 @@
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+# Gradle optimization for 2025
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
 org.gradle.daemon=true
 org.gradle.workers.max=4
 
+# Build performance
+org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache-problems=warn
+
+# Kotlin DSL optimization (if used)
+kotlin.incremental=true
+kotlin.incremental.js=true
+kotlin.incremental.multiplatform=true
