--- a/patient-service/src/main/resources/application.yml
+++ b/patient-service/src/main/resources/application.yml
@@ -10,23 +10,27 @@ spring:
     password: postgres
     driver-class-name: org.postgresql.Driver
     hikari:
-      maximum-pool-size: 20
-      minimum-idle: 5
+      maximum-pool-size: ${HIKARI_MAX_POOL_SIZE:20}
+      minimum-idle: ${HIKARI_MIN_IDLE:5}
       connection-timeout: 30000
       idle-timeout: 600000
       max-lifetime: 1800000
       leak-detection-threshold: 60000
       pool-name: PatientHikariCP
+      register-mbeans: true
+      connection-test-query: SELECT 1
+      register-mbeans: true
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: false
+    open-in-view: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: false
         jdbc:
-          batch_size: 20
+          batch_size: 25
           order_inserts: true
           order_updates: true
         jdbc.batch_versioned_data: true
@@ -37,6 +41,10 @@ spring:
           provider_class: org.hibernate.cache.jcache.JCacheRegionFactory
         connection:
           provider_disables_autocommit: true
+  cache:
+    type: caffeine
+    caffeine:
+      spec: maximumSize=1000,expireAfterWrite=10m
 
 eureka:
   client:
@@ -51,9 +59,22 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,prometheus
+        include: health,info,prometheus,metrics,httptrace
   metrics:
     export:
       prometheus:
         enabled: true
+    tags:
+      application: ${spring.application.name}
+      environment: ${spring.profiles.active:default}
+  tracing:
+    sampling:
+      probability: 1.0
+  health:
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true
+    db:
+      enabled: true
 
