--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -255,8 +255,12 @@ jobs:
           args: >
             --failOnCVSS 7
             --enableRetired
+            --noupdate
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_21_X64 }}
       
       - name: Upload dependency check results
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
