--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,6 +12,7 @@ env:
   DOCKER_BUILDKIT: 1
   REGISTRY: ghcr.io
   IMAGE_TAG: ${{ github.sha }}
+  GITHUB_OWNER: ${{ github.repository_owner }}
 
 jobs:
   # Build and Test
@@ -221,11 +222,12 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.REGISTRY }}/${{ github.repository_owner }}/healthcare-microservices/${{ matrix.service }}:latest
+          image-ref: ${{ env.REGISTRY }}/${{ env.GITHUB_OWNER }}/healthcare-microservices/${{ matrix.service }}:latest
           format: 'sarif'
           output: 'trivy-results.sarif'
           exit-code: '0'
           severity: 'CRITICAL,HIGH'
+        continue-on-error: true
       
       - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
