--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -198,7 +198,7 @@ jobs:
   security-scan:
     name: Security Scan
     runs-on: ubuntu-latest
-    needs: build-docker-images
+    needs: [build-docker-images, build-frontend]
     if: github.event_name == 'push'
     
     strategy:
@@ -219,10 +219,26 @@ jobs:
         ]
     
     steps:
+      - name: Wait for image availability
+        run: |
+          IMAGE="${{ env.REGISTRY }}/${{ github.repository_owner }}/healthcare-microservices/${{ matrix.service }}:latest"
+          echo "Waiting for image: $IMAGE"
+          for i in {1..30}; do
+            if docker manifest inspect "$IMAGE" >/dev/null 2>&1; then
+              echo "Image found!"
+              exit 0
+            fi
+            echo "Attempt $i/30: Image not found, waiting 10s..."
+            sleep 10
+          done
+          echo "Image not found after 5 minutes, skipping scan"
+          exit 0
+        continue-on-error: true
+      
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.REGISTRY }}/${{ env.GITHUB_OWNER }}/healthcare-microservices/${{ matrix.service }}:latest
+          image-ref: ${{ env.REGISTRY }}/${{ github.repository_owner }}/healthcare-microservices/${{ matrix.service }}:latest
           format: 'sarif'
           output: 'trivy-results.sarif'
           exit-code: '0'
